# my-cafe-python

./: .gitignore  .python-version  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
cafe/: filters.py  models.py  serializers.py  urls.py  views.py
cafe/migrations/: 0001_initial.py  0002_initial.py  0002_load_cafe.py
cafe/migrations/data/: cafe.json
common/: constants.py  pagination.py  serializers.py
common/utils/: files.py
employee/: filters.py  models.py  serializers.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_alter_employee_phone_number.py  0003_load_employee.py
employee/migrations/data/: employee.json
my_cafe/: asgi.py  settings.py  urls.py  wsgi.py
